# hsys-profiling

./: .clangd  CMakeLists.txt
assets/: matmul.ncu-rep
bench/: CMakeLists.txt
bench/include/: cuda_timer.cuh
bench/src/: dot_bench.cu  matmul_bench.cu  pack_bench.cu  vadd_bench.cu
benchmark_pp/: complexity_chart.py  dry.py  speedup_chart.py
buffer/: CMakeLists.txt
buffer/include/buffer/: buffer.cuh
cmake/: cuda_arch.cmake  setup_cuda_targets.cmake
core/: CMakeLists.txt  data.cuh  matrix_view.cuh  vector.cuh  vector_view.cuh
core/include/core/: data.cuh  kinds.cuh  matrix.cuh  matrix_view.cuh  vector.cuh  vector_view.cuh
dot/: CMakeLists.txt
dot/include/dot/: dot_atomic.cuh  dot_coars.cuh  dot_nlog.cuh  dot_shmem.cuh  dot_vect.cuh
entry/: CMakeLists.txt
entry/include/: fill_rand.cuh
entry/src/: dot.cu  matmul.cu  vadd.cu
kernels/: CMakeLists.txt
kernels/include/kernels/: dot_atomic.cuh  dot_coarsened.cuh  dot_nlog.cuh  dot_nlog_vect.cuh  dot_nlog_vect_fma.cuh  dot_shmem.cuh  dot_vectorized.cuh  utils.cuh  warp_size.cuh
matmul/: CMakeLists.txt
matmul/include/matmul/: matmul.cuh  matmul_extend_adown.cuh  matmul_extend_bright.cuh  matmul_extend_sym.cuh  matmul_extend_sym2.cuh  matmul_extend_sym3.cuh  matmul_extend_symn.cuh
pack/: CMakeLists.txt
pack/include/pack/: buffer.cuh  dynpack.cuh  kernel_cmd.cuh  kernel_cmd_dynpack.cuh  kernel_cmd_pack.cuh  kernel_cmd_var.cuh  pack.cuh  uvariant.cuh
rand/: CMakeLists.txt
rand/include/: fill_rand.cuh
task/: CMakeLists.txt
task/include/task/: cmd.cuh  task.cuh
tests/: CMakeLists.txt
tests/src/: buffer_tests.cu  pack_dynpack_tests.cu  pack_pack_tests.cu  pack_tests.cu  pack_var_tests.cu  vadd_tests.cu
vadd/: CMakeLists.txt
vadd/include/vadd/: context.cuh  slot.cuh  vadd.cuh  vadd_persist.cuh
